--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,7 +26,24 @@ body {
 
 .gameboard-grid {
   display: grid;
-  grid-gap: 1vw;
+  grid-gap: 1vh;
+  background-color: black;
+  border: 1vh solid black;
+}
+
+.grid-cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .grid-2-horizontal {
