--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,10 +37,29 @@ body {
   justify-content: center;
 }
 
+.name {
+  font-size: 2rem;
+}
+
+.clock {
+  font-size: 2rem;
+  background-color: #549e4c;
+  padding: 0.5rem;
+  border: 1vh solid black;
+}
+
 .column {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: baseline;
+  align-items: center;
+  height: 100vh;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
   height: 100vh;
   width: 100vw;
