--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,9 +26,9 @@ body {
 
 .gameboard-grid {
   display: grid;
-  grid-gap: 1vh;
+  grid-gap: 0.3vh;
   background-color: black;
-  border: 1vh solid black;
+  border: 0.3vh solid black;
 }
 
 .grid-cell {
@@ -45,7 +45,7 @@ body {
   font-size: 2rem;
   background-color: #549e4c;
   padding: 0.5rem;
-  border: 1vh solid black;
+  border: 0.3vh solid black;
 }
 
 .column {
@@ -53,7 +53,7 @@ body {
   flex-direction: column;
   justify-content: baseline;
   align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .row {
@@ -61,8 +61,25 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+}
+
+.gameplayButtonContainer {
+  position: fixed;
+  right: 2vw;
+  bottom: 2vh;
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+}
+.drawButton {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+.concedeButton {
+  font-size: 1.5rem;
+  padding: 0.5rem;
 }
 
 .grid-2-horizontal {
