--- a/frontend/packages/web/src/index.css
+++ b/frontend/packages/web/src/index.css
@@ -1,25 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Texturina:opsz,wght@12..72,500&display=swap');
+
 body {
   margin: 0;
+  overscroll-behavior: none;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  height: 100%;
-}
-
 #root {
-  height: 100%;
+  min-height: 100vh;
+  background-color: #336541;
+}
+
+h1 {
+  margin: 0;
+  font-size: 2em;
+}
+
+p {
+  margin: 0;
+}
+
+input,
+button,
+p,
+a,
+h1 {
+  font-family: 'texturina';
+}
+
+.appBody {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  padding: 2vh;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 2vh;
+}
+
+.gradientBackground {
+  background-image: linear-gradient(to bottom right, #097500, #2dff74);
+  box-shadow: inset 0.5em 0.5em 0.5em 0em #57b45e, inset -0.5em -0.5em 0.5em 0em #1ba23f;
 }
 
 .gameboard-grid {
@@ -46,23 +81,6 @@ body {
   border: 0.3vh solid black;
 }
 
-.column {
-  display: flex;
-  flex-direction: column;
-  justify-content: baseline;
-  align-items: center;
-  height: 100%;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-}
-
 .gameplayButtonContainer {
   position: fixed;
   right: 2vw;
@@ -82,22 +100,4 @@ body {
 .startButton {
   font-size: 1.5rem;
   padding: 0.5rem;
-}
-
-.outline {
-  outline: 1px black;
-  outline-style: solid;
-}
-
-.hompage_room-list {
-  max-width: 50%;
-}
-
-.hompage_room-link {
-  text-decoration: none;
-  display: block;
-}
-
-.hompage_room-link:visited {
-  color: black;
 }
